--- a/docs/Design/SystDesign/SystDes.tex
+++ b/docs/Design/SystDesign/SystDes.tex
@@ -8,6 +8,7 @@
 \usepackage{graphicx}
 \usepackage{float}
 \usepackage{hyperref}
+\usepackage{float}
 \hypersetup{
     colorlinks,
     citecolor=blue,
@@ -149,9 +150,16 @@ The device is worn by a participant on the wrist for measuring activity and gene
 		Answering prompts using touch sensor (bezel). & Toggle between different 				options on screen. For example: (Yes/No).\\
 		\hline
 	\end{tabularx}
-\caption{\label{Hardware User Interface}Table for Hardware User Interface}  
+\caption{\label{Hardware User Interface}Components of Hardware User Interface}  
 \end{table}
 
+\begin{figure}[H]
+	\begin{center}
+		 \includegraphics[width=1\textwidth]{HardwareUI_FSM}
+		\caption{Finite State Machine for Hardware User Interface}
+		\label{HardwareUI_FSM} 
+	\end{center}
+\end{figure}
 
 \subsection{Software User Interface}
 
@@ -177,15 +185,68 @@ The Software User Interface will be used by the Researcher for configuring the a
 		Data View Window & Data stored on SD card can be viewed and filtered. Data can also be plotted using Graph button. For example: Heart Rate vs Time.\\
 		\hline
 	\end{tabularx}
-\caption{\label{Software User Interface}Table for Software User Interface}  
+\caption{\label{Software User Interface}Components of Software User Interface}  
 \end{table}
 
-For images of Software User Unterface, refer to Appendix.
+Below is an example of the Software User Interface for the Main window.
+\begin{figure}[H]
+	\begin{center}
+		 \includegraphics[width=0.8\textwidth]{MainWindow}
+		\caption{Main Window}
+		\label{MainWindow} 
+	\end{center}
+\end{figure}
+
+For more examples of Software User Unterface, refer to Appendix.
+
+\begin{figure}[H]
+	\begin{center}
+		 \includegraphics[width=1\textwidth]{SoftwareUI_FSM}
+		\caption{Finite State Machine for Software User Interface}
+		\label{SoftwareUI_FSM} 
+	\end{center}
+\end{figure}
 
 \wss{Design of user interface for software and hardware.  Attach an appendix if
 needed. Drawings, Sketches, Figma}
 
 \section{Design of Hardware}
+
+The table below shows hardware components that will be used in the activity tracker.
+\begin{table}[H]
+	\begin{tabularx}{1.05\textwidth} { 
+		  | >{\centering\arraybackslash}X 
+		  | >{\centering\arraybackslash}X 
+		  | >{\centering\arraybackslash}X 
+		  | >{\centering\arraybackslash}X | }
+		 \hline
+		 \textbf{Hardware Component} & \textbf{Description}\\
+		 \hline
+		Custom PCB & Custom PCB designed to fit in activity tracker.  \\
+		\hline 
+		 MPU 6050 & Accelrometer/Gyroscope, off-shelf component.\\
+		\hline
+		 seeeduino xiao samd21  & off-shelf microcontroller for activity tracker.\\
+		 \hline
+		   DS1307 RTC & Real time clock, off-shelf component. \\
+		\hline
+		TFT Display & Off-shelf display used in activity tracker. \\
+		\hline 
+		Outer casing for TFT Display & Designed using Autodesk Inventor and 3D printed \\
+		\hline 
+		Li-Po Battery & Generic off-shelf lipo battery used for smart watches.  \\
+		\hline 
+		USB Type-B charger & Generic off-shelf usb to Type-B charger to charge device. \\
+		\hline 
+		MicroSD card & Standard off-shelf SD card. \\
+		\hline
+		SDCARD connector 473521001& MicroSD connector (off-shelf component) \\
+		\hline
+		Watch straps & Generic watch-straps for strapping device onto the wrist. \\
+		\hline 
+	\end{tabularx}
+\caption{\label{DesignHardware}Components of Hardware Design}  
+\end{table}
 
 \wss{Most relevant for mechatronics projects}
 \wss{Show what will be acquired}
@@ -215,6 +276,55 @@ circuit diagrams, etc}
 
 \appendix
 
+\section{Software Interface}
+
+\begin{figure}[H]
+	\begin{center}
+		 \includegraphics[width=0.8\textwidth]{Config}
+		\caption{Configuration Window}
+		\label{Config} 
+	\end{center}
+\end{figure}
+
+\begin{figure}[H]
+	\begin{center}
+		 \includegraphics[width=0.5\textwidth]{CreateRecord}
+		\caption{Create Record Window}
+		\label{CreateRecord} 
+	\end{center}
+\end{figure}
+
+\begin{figure}[H]
+	\begin{center}
+		 \includegraphics[width=1\textwidth]{Record}
+		\caption{Record Window}
+		\label{Record} 
+	\end{center}
+\end{figure}
+
+\begin{figure}[H]
+	\begin{center}
+		 \includegraphics[width=0.5\textwidth]{login}
+		\caption{Login Dialogue box}
+		\label{Login} 
+	\end{center}
+\end{figure}
+
+\begin{figure}[H]
+	\begin{center}
+		 \includegraphics[width=1\textwidth]{DataView}
+		\caption{Data View Window}
+		\label{DataView} 
+	\end{center}
+\end{figure}
+
+\begin{figure}[H]
+	\begin{center}
+		 \includegraphics[width=0.8\textwidth]{Graph}
+		\caption{Generated Graph for Heart Rate vs Time}
+		\label{Graph} 
+	\end{center}
+\end{figure}
 \section{Mechanical Hardware}
 
 \section{Electrical Components}
@@ -235,61 +345,5 @@ graduate attribute of Problem Analysis and Design.  Please answer the following 
   (LO\_Explores)
 \end{enumerate}
 
-\section{Software Interface}
-\begin{figure}[h!]
-	\begin{center}
-		 \includegraphics[width=0.8\textwidth]{MainWindow}
-		\caption{Main Window}
-		\label{MainWindow} 
-	\end{center}
-\end{figure}
-
-\begin{figure}[h!]
-	\begin{center}
-		 \includegraphics[width=0.8\textwidth]{Config}
-		\caption{Configuration Window}
-		\label{Config} 
-	\end{center}
-\end{figure}
-
-\begin{figure}[h!]
-	\begin{center}
-		 \includegraphics[width=0.5\textwidth]{CreateRecord}
-		\caption{Create Record Window}
-		\label{CreateRecord} 
-	\end{center}
-\end{figure}
-
-\begin{figure}[h!]
-	\begin{center}
-		 \includegraphics[width=1\textwidth]{Record}
-		\caption{Record Window}
-		\label{Record} 
-	\end{center}
-\end{figure}
-
-\begin{figure}[h!]
-	\begin{center}
-		 \includegraphics[width=0.5\textwidth]{login}
-		\caption{Login Dialogue box}
-		\label{Login} 
-	\end{center}
-\end{figure}
-
-\begin{figure}[h!]
-	\begin{center}
-		 \includegraphics[width=1\textwidth]{DataView}
-		\caption{Data View Window}
-		\label{DataView} 
-	\end{center}
-\end{figure}
-
-\begin{figure}[h!]
-	\begin{center}
-		 \includegraphics[width=0.8\textwidth]{Graph}
-		\caption{Generated Graph for Heart Rate vs Time}
-		\label{Graph} 
-	\end{center}
-\end{figure}
 
 \end{document}
