--- a/docs/Design/SoftDetailedDes/MIS.tex
+++ b/docs/Design/SoftDetailedDes/MIS.tex
@@ -53,8 +53,7 @@ urlcolor=cyan          % color of external links
 \begin{tabularx}{\textwidth}{p{3cm}p{2cm}X}
 \toprule {\bf Date} & {\bf Version} & {\bf Notes}\\
 \midrule
-Date 1 & 1.0 & Notes\\
-Date 2 & 1.1 & Notes\\
+January 18th, 2023 & 1.0 & Initial Documentation\\
 \bottomrule
 \end{tabularx}
 
@@ -76,11 +75,10 @@ See SRS Documentation at \wss{give url}
 
 \section{Introduction}
 
-The following document details the Module Interface Specifications for
-\wss{Fill in your project name and description}
+The following document details the Module Interface Specifications for the EMAnator; the system currently being developed by the Back End Developers designed to aid in Ecological Momentary Assessment research. This document describes the various relevant details of interfacing with each module. These details include  module descriptions, the uses of each module, the syntax of each module, and the semantics associated with each module.
 
 Complementary documents include the System Requirement Specifications
-and Module Guide.  The full documentation and implementation can be
+and Module Guide. The Back End Developers highly recommend a thorough read-through of each document prior to a reading of this document to attain the prerequisite knowledge necessary to fully understand this MIS. The full documentation and implementation can be
 found at \url{...}.  \wss{provide the url for your repo}
 
 \section{Notation}
