--- a/docs/Design/SoftArchitecture/MG.tex
+++ b/docs/Design/SoftArchitecture/MG.tex
@@ -232,9 +232,7 @@ actually be implemented.
 
 \section{Connection Between Requirements and Design} \label{SecConnection}
 
-The design of the system is intended to satisfy the requirements developed in
-the SRS. In this stage, the system is decomposed into modules. The connection
-between requirements and modules is listed in Table~\ref{TblRT}.
+Please refer to section 6.4 in the System Design document.
 
 \section{Module Decomposition} \label{SecMD}
 
@@ -263,7 +261,7 @@ to be implemented.
   \item[Implemented By:] OS
 \end{description}
 
-\subsubsection{Batter Management System (\mref{mBM})}
+\subsubsection{Battery Management System (\mref{mBM})}
 \begin{description}
   \item[Secrets:] Array to store data
   \item[Services:] This module provides the interface between the hardware and the
