Made a change to section 6

--- a/docs/Design/SoftArchitecture/MG.tex
+++ b/docs/Design/SoftArchitecture/MG.tex
@@ -232,7 +232,7 @@ actually be implemented.
 
 \section{Connection Between Requirements and Design} \label{SecConnection}
 
-Please refer to section 6.4 in the System Design document.
+Please refer to section 6.4 in the \href{https://github.com/zakerl/Capstone_Project/blob/main/docs/Design/SystDesign/SystDes.pdf}{System Design document} .
 
 \section{Module Decomposition} \label{SecMD}
 
